PR/52682: David Binderman: Fix wrong assignment (in the !__NetBSD__ code)